@@ -14,10 +14,12 @@ include_directories("${PROJECT_BINARY_DIR}")
 set(SOURCES ${SOURCES}
 	${PROJECT_SOURCE_DIR}/ActionSender.cpp
 	${PROJECT_SOURCE_DIR}/FrameBuffer.cpp
+	${PROJECT_SOURCE_DIR}/SystemCreator.cpp
 )
 set(HEADERS ${HEADERS}
 	${PROJECT_INCLUDE_DIR}/ActionSender.hpp
 	${PROJECT_INCLUDE_DIR}/FrameBuffer.hpp
+	${PROJECT_INCLUDE_DIR}/SystemCreator.hpp
 )
 
 add_library(SphereSim_ClientLib STATIC ${SOURCES} ${HEADERS})
