@@ -1,10 +1,24 @@
 set term png truecolor enhanced size 800,600
-set out "graphs.png"
+
+k = 1.38e-23
+NA= 6.022e23
+u = 0.001 / NA
+T0 = 14
+a(m,T) = sqrt(k*T/(m*u))
+p(v,m,T) = 4 * pi * v**2 * (m*u/(2*pi*k*T))**1.5 * exp(-m * u * v**2 / (2*k*T))
+q(v,m,T) = erf(v/(sqrt(2)*a(m,T)))-sqrt(2/pi)*(v*exp(-v**2/(2*a(m,T)**2)))/a(m,T)
 
 f1(x) = erf(x/(sqrt(2)*a1))-sqrt(2/pi)*(x*exp(-x**2/(2*a1**2)))/a1
 g1(x) = 100*sqrt(2/pi)*((x**2)*exp(-x**2/(2*a1**2)))/(a1**3)
-a1 = 40
+a1 = a(40,T0)
 fit f1(x) "graphdata.txt" via a1
+
+set out "graphs.png"
 plot "graphdata.txt", \
 	f1(x), \
-	g1(x)
+	q(x,40,T0)
+
+set out "graphs2.png"
+plot "graphdata.txt", \
+	g1(x), \
+	100*p(x,40,T0)
