@@ -1,6 +1,7 @@
 * Improved simulated systems in Viewer and Grapher.
 * Added periodic boundary conditions; currently works with pairwise forces only.
 * Added buttons to Viewer and methods to control kinetic energy of the system.
+* Added SystemCreator class to provide common systems for all clients.
 
 SphereSim 2.4.0:
 * Added methods to control and calculate Lennard-Jones potentials and forces.
